# mcp

./: .gitignore  README.md
postgresql-cs-mcp/: .gitignore  Cognitiv.PostgresqlMcp.sln  Dockerfile  README.md
postgresql-cs-mcp/src/PostgresqlMcp/: DatabaseManager.cs  PostgresqlMcp.csproj  PostgresqlTools.cs  Program.cs
postgresql-mcp/: .env.example  Dockerfile  README-DOCKER.md  README.md  docker-compose.yml  pyproject.toml
postgresql-mcp/src/postgresql_mcp/: __init__.py  __main__.py  db.py
postgresql-mcp/tests/: test_db.py
scylladb-mcp/: .env.example  COMPARISON.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scylladb-mcp/src/scylladb_mcp/: __init__.py  __main__.py  db.py
scylladb-mcp/tests/: test_db.py
